--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v2.html
@@ -13,7 +13,7 @@
                     <h5 class="card-title"></h5>
 
                     {% for i in shift_list %}
-                    <div class="row" >
+                    <div class="row mb-5" >
                       <div class="col text-center ">
                         <h3 style="font-family: 'iransans-bold'">
 
@@ -159,7 +159,7 @@
                               <tr>
 
                                 <th style="color:#000000">مجموع راندمان تولید</th>
-                                <th style="color:#000000">مجموع پاداش تولید</th>
+                                <th style="color:#000000">مجموع پاداش رتبه تولید</th>
                                 <th style="color:#000000">مجموع پاداش نظافت</th>
                                 <th style="color:#000000">مجموع کل</th>
                               </tr>
