--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList_v2.html
@@ -1,7 +1,23 @@
 {% extends 'mrp/blank-page.html' %}
 {% load static %}
 {% load humanize %}
-
+{% block stylesheet %}
+<style>
+  .table-bordered td, .table-bordered th {
+    border: 1px solid #000000;
+}
+  .table thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #000000;
+}
+  .table-responsive > .table-bordered {
+    border: 1px solid #000000; /* Adds a 1px solid border with a light gray color */
+}
+  .table-responsive > .table-bordered {
+    border: 1px solid #000000 !important;
+}
+</style>
+{% endblock %}
 {% block content %}
 <div class="row app-block">
 
