--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -207,13 +207,20 @@
   <div id="apps3">
     <ul>
       <li class="navigation-divider">گزارشات</li>
-    </ul>
     <li>
       <a href="{% url 'daily_tolid_with_chart' %}">
         <span>نمودار میله ای روزانه تولید</span>
 
       </a>
     </li>
+    <li>
+      <a href="{% url 'daily_tolid_with_chart2' %}">
+        <span>جدول روزانه تولید</span>
+
+      </a>
+    </li>
+  </ul>
+
   </div>
 
 </div>
