--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid_v2.html
@@ -79,7 +79,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive mytable" style="overflow: hidden; outline: none;" tabindex="1">
-                                <table class="table table-striped fw-bold" id="productionTable">
+                                <table class="table table-striped table-bordered" id="productionTable">
                                     <thead>
                                     <tr id="machineNames">
                                         
@@ -108,7 +108,7 @@
                             
 
                             <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="1">
-                                <table class="table table-striped fw-bold" id="productionTable2">
+                                <table class="table table-striped table-bordered" id="productionTable2">
                                     
                                 </table>
                             </div>
