--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderForm.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderForm.html
@@ -26,7 +26,7 @@
             <label for="quantityInput" class="form-label">کمیت *</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="fas fa-calculator"></i></span>
-                <input type="number" class="form-control pdate" id="quantityInput" min="0.1" step="0.1" value="1.0" required name="quantity_to_produce">
+                <input type="number" class="form-control " id="quantityInput" min="0.1" step="0.1" value="1.0" required name="quantity_to_produce">
             </div>
         </div>
         <div class="col-md-4">
@@ -41,7 +41,7 @@
     <div class="row mb-4">
         <div class="col-md-4">
             <label for="dateInput" class="form-label">تاریخ شروع *</label>
-            <input type="text" class="form-control" id="dateInput" required name="scheduled_date">
+            <input type="text" class="form-control pdate" id="dateInput" required name="scheduled_date">
         </div>
         <div class="col-md-4">
             <label for="customerSelect" class="form-label">مشتری</label>
