--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/mOrderList.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/mOrderList.html
@@ -360,6 +360,7 @@
 {% endblock%}
 {% block javascript %}
 <!-- Javascript -->
+<script src="{% static 'vendors/input-mask/jquery.mask.js' %}"></script>
 <script src="{% static 'vendors/select2/js/select2.min.js' %}"></script>
 <script src="{% static 'project/manufacturing_order.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
