--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderForm.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderForm.html
@@ -62,10 +62,10 @@
     <!-- Tabs for Components and Work Orders -->
     <ul class="nav nav-tabs mb-3" id="moTabs" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="components-tab" data-bs-toggle="tab" data-bs-target="#components" type="button" role="tab" aria-controls="components" aria-selected="true">Components</button>
+            <button class="nav-link active" id="components-tab" data-bs-toggle="tab" data-bs-target="#components" type="button" role="tab" aria-controls="components" aria-selected="true">اجزا</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="workorders-tab" data-bs-toggle="tab" data-bs-target="#workorders" type="button" role="tab" aria-controls="workorders" aria-selected="false">Work Orders</button>
+            <button class="nav-link" id="workorders-tab" data-bs-toggle="tab" data-bs-target="#workorders" type="button" role="tab" aria-controls="workorders" aria-selected="false">دستور کارها</button>
         </li>
     </ul>
 
@@ -84,7 +84,7 @@
                     </thead>
                     <tbody id="bomPreviewBody">
                         <tr>
-                            <td colspan="4" class="text-center text-muted">Select a product and BOM to see components</td>
+                            <td colspan="4" class="text-center text-muted">برای دیدن اجزا باید یک محصول انتخاب کنید</td>
                         </tr>
                     </tbody>
                 </table>
