--- a/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/manufactureorder/partialMOrderUpdate.html
@@ -1,10 +1,11 @@
 <form method="post" action="{% url 'update_morder' form.instance.id  %}" class="js-morder-update-form" autocomplete="off">
  
     <div class="modal-header bg-primary" >
+
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h4 class="modal-title">جدید</h4>
+      <h4 class="modal-title">ویرایش</h4>
     </div>
     <div class="modal-body">
      {% include 'mrp/manufactureorder/partialMOForm2.html' %}
