--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
@@ -108,7 +108,7 @@
         
         
         </div>
-        <div class="tab-pane fade" id="notes" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="tab-pane fade" id="notes" role="tabpanel" aria-labelledby="profile-tab" style="max-height: 800px; overflow-y: auto;">
             <div id="notes-section">
                 {% for comment in notes %}
                    
@@ -188,18 +188,18 @@
 <script>
     // Dummy users list
     $(document).ready(function () {
-        $("#contact").niceScroll({
+        $("#profile").niceScroll({
             cursorcolor: "#00f", // Customize scrollbar color
             cursorwidth: "8px", // Width of the scrollbar
             background: "#ddd", // Background of the scrollbar track
             autohidemode: true  // Hide scrollbar when not scrolling
         });
-        // $("#notes").niceScroll({
-        //     cursorcolor: "#00f", // Customize scrollbar color
-        //     cursorwidth: "8px", // Width of the scrollbar
-        //     background: "#ddd", // Background of the scrollbar track
-        //     autohidemode: true  // Hide scrollbar when not scrolling
-        // });
+        $("#notes").niceScroll({
+            cursorcolor: "#00f", // Customize scrollbar color
+            cursorwidth: "8px", // Width of the scrollbar
+            background: "#ddd", // Background of the scrollbar track
+            autohidemode: true  // Hide scrollbar when not scrolling
+        });
         // Dummy users list
         let users1000 = [
             // { key: "arzande", value: "arzande" },
