--- a/tiny_mrp/mrp/templates/mrp/temp2.html
+++ b/tiny_mrp/mrp/templates/mrp/temp2.html
@@ -30,7 +30,7 @@
     
     {% endblock %}
 </head>
-<body class="stretch-layout navigation-toggle-one">
+<body class=" navigation-toggle-one">
 
 <!-- begin::preloader-->
 <div class="preloader">
