--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
@@ -36,6 +36,8 @@
                                                 <a class="dropdown-item" href="#">محبوب</a>
                                                 <a class="dropdown-item" href="#">برچسب</a> -->
                                                 <a class="dropdown-item text-success confirm-purchase-request" data-url="{% url 'confirm_request' i.id %}" href="#">تایید</a>
+                                                <a class="dropdown-item text-danger reject-purchase-request" data-url="{% url 'reject_request' i.id %}" href="#">رد درخواست</a>
+
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item text-danger delete-purchase-request" data-url="{% url 'delete_purchase_request_v2' i.id %}" href="#">حذف</a>
