--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -257,7 +257,8 @@
   <script src="{% static 'assets/js/examples/select2.js' %}"></script>
   <script>
     $('.select2-example').select2({
-        placeholder: 'اشخاص'
+        placeholder: 'اشخاص',
+        
     });
     $('input[name="start"]').pDatepicker({
         format: 'YYYY-MM-DD',
