--- a/tiny_mrp/mrp/templates/mrp/temp2.html
+++ b/tiny_mrp/mrp/templates/mrp/temp2.html
@@ -30,7 +30,7 @@
     {% block stylesheet %}
     
     {% endblock %}
-    {% include 'webpush_header.html' %}
+    <!-- {% include 'webpush_header.html' %} -->
 </head>
 <body class="stretch-layout navigation-toggle-one">
 
