--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load custom_filters %}
 {% for i in req %}
-                        <li class="list-group-item {% if request.user.id in i.get_viwer %} active {% endif %}" data-id={{i.id}} data-url="{% url 'update_purchase_v2' i.id %}" >
+                        <li class="list-group-item {% if i.is_rejected %} bg-danger {% endif %} {% if request.user.id in i.get_viwer and not i.is_rejected  %} active {% endif %}  " data-id={{i.id}} data-url="{% url 'update_purchase_v2' i.id %}" >
                             <div>
                                 <div class="custom-control  mr-2">
                                     
@@ -82,6 +82,13 @@
                                             <li class="list-inline-item mb-0">
                                                 <a href="#" data-toggle="tooltip" title="" data-original-title="اسناد مالی">
                                                     <i class="fa fa-money"></i>
+                                                </a>
+                                            </li>
+                                            {% endif %}
+                                            {% if i.is_rejected %}
+                                            <li class="list-inline-item mb-0">
+                                                <a href="#" data-toggle="tooltip" title="" data-original-title="رد شده">
+                                                    <i class="fa fa-exclamation-circle"></i>
                                                 </a>
                                             </li>
                                             {% endif %}
